# archive

./: .gitignore  README.md
backend/backend-20260123-dbudyak/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  yoyo.ini
backend/backend-20260123-dbudyak/.github/workflows/: ci.yml
backend/backend-20260123-dbudyak/config/: urls.csv
backend/backend-20260123-dbudyak/docs/: HOME_ASSIGNMENT.md  IMPLEMENTATION.md  README.md
backend/backend-20260123-dbudyak/docs/interview/: INTERVIEW_PREP.md  assignment-deep-dive.md
backend/backend-20260123-dbudyak/migrations/: 0001_create_monitoring_events.rollback.sql  0001_create_monitoring_events.sql  0002_url_varchar.rollback.sql  0002_url_varchar.sql
backend/backend-20260123-dbudyak/src/website_monitor/: main.py
backend/backend-20260123-dbudyak/src/website_monitor/config/: config_loader.py  models.py
backend/backend-20260123-dbudyak/src/website_monitor/database/: errors.py  migrations.py  models.py  repository.py
backend/backend-20260123-dbudyak/src/website_monitor/net/: http_client.py  models.py  retry.py
backend/backend-20260123-dbudyak/tests/: conftest.py
backend/backend-20260123-dbudyak/tests/integration/: conftest.py  test_repository.py
backend/backend-20260123-dbudyak/tests/unit/: test_circuit_breaker.py  test_config.py  test_http_client.py  test_mappers.py  test_repository.py  test_retry.py  test_scheduler_service.py  test_url_check_service.py  test_url_config.py  test_url_loader.py
entangler/: LICENSE  README.md
flibsAndroid/: build.gradle  (+1 more)
(+352 files in other folders)
